# cpt-dashboard

./: .gitignore  Dockerfile  README.md  README.old.md  compose.yaml  local-compose.sh  package-lock.json  package.json  pod-compose.sh  pod-e2e.sh  publish-containers.sh  run-container.sh  run-local.sh  test.csv
.github/codeql/: javascript-config.yml  python-config.yml
.github/workflows/: backend-check.yaml  build-container.yaml  build-push.yaml  codeql-analysis.yml  frontend-check.yaml  lint.yaml  poetry-check.yaml  release-build-push.yaml  stale.yml  test.yaml
argocd/: Chart.yaml  README.md  values.yaml
argocd/templates/: dashboard-dev.yaml  dashboard.yaml
backend/: .flake8  .gitignore  Containerfile  Pipfile  README.md  backend.containerfile  backend.containerfile.in  config.py  main.py  ocp_server.cfg  pyproject.toml  requirements.txt  skeleton.toml  to_run
backend/api/: elasticsearch_api.py
backend/app/: Pipfile  async_util.py  config.py  entrypoint.py  main.py  requirements.txt  util.py
backend/app/api/: api.py  elasticsearch_api.py
backend/app/api/endpoints/: airflow.py  common.py  download.py  example.py  graph.py  jenkins.py  jobs.py  results.py
backend/app/api/v1/commons/: common.py  constants.py  example_responses.py  hasher.py  hce.py  ocm.py  ocp.py  ols.py  oso.py  quay.py  responses.py  rhoai.py  telco.py  utils.py
backend/app/api/v1/endpoints/: airflow.py  common.py  graph.py  jenkins.py  jobs.py  results.py
backend/app/api/v1/endpoints/cpt/: cptJobs.py  jira.py
backend/app/api/v1/endpoints/cpt/maps/: hce.py  ocm.py  ocp.py  quay.py  rhoai.py  telco.py
backend/app/api/v1/endpoints/horreum/: horreum.py
backend/app/api/v1/endpoints/ilab/: ilab.py
backend/app/api/v1/endpoints/jira/: jira.py
backend/app/api/v1/endpoints/ocm/: ocmJobs.py
backend/app/api/v1/endpoints/ocp/: graph.py  kpi.py  ocpJobs.py  results.py  summary.py
backend/app/api/v1/endpoints/ols/: olsGraphs.py  olsJobs.py
backend/app/api/v1/endpoints/oso/: osoJobs.py
backend/app/api/v1/endpoints/quay/: quayGraphs.py  quayJobs.py  summary.py
backend/app/api/v1/endpoints/rhoai/: jobs.py
backend/app/api/v1/endpoints/stub/: stub.py
backend/app/api/v1/endpoints/summary/: summary.py  summary_api.py  summary_search.py
backend/app/api/v1/endpoints/telco/: telcoGraphs.py  telcoJobs.py
backend/app/api/v2/commons/: common.py
backend/app/api/v2/endpoints/: jobs.py
backend/app/core/: airflow_transform.py  config.py  elastic_transform.py  transform.py  transformv2.py
backend/app/models/: airflow.py  jobrun.py  query.py
backend/app/scripts/: start-reload.sh  start.sh
backend/app/services/: airflow.py  crucible_readme.md  crucible_svc.py  elasticsearch.py  elasticsearch_api.py  horreum_svc.py  jira_svc.py  search.py  splunk.py  transform.py
backend/app/tests/: mocklong.csv  widened2.json
backend/models/: jobrun.py
backend/scripts/: start-proxy.sh  start-reload.sh  start.sh  version.py
backend/services/: extract.py  transform.py
backend/tests/: conftest.py  db_seed.py  e2e_backend.containerfile  e2e_backend.sh  fake_elastic.py  functional.containerfile  mocklong.csv  ocpperf_test.toml  old_mock.json  opensearch_ocp.sh  test_crucible.py  test_ilab_api.py
backend/tests/functional/: conftest.py  test_ilab_runs.py  test_ocp_jobs.py  test_run.py
backend/tests/functional/setup/: funcconfig.toml  functional.containerfile  ocp_opensearch.yml  opensearch.sh  opensearch.yml  test.sh
backend/tests/unit/: conftest.py  fake_elastic.py  fake_elastic_service.py  fake_splunk.py  test_api.py  test_cpt_jobs.py  test_crucible.py  test_hasher.py  test_hce.py  test_ilab_api.py  test_ocm.py  test_ocp.py  test_ocp_graph.py  test_ocp_jobs.py  test_ocp_results.py  test_ocp_summary.py  test_ols.py  test_quay.py  test_quay_summary.py  test_search.py  test_splunk.py  test_summary.py  test_summary_api.py  test_summary_search.py  test_telco.py  test_utils.py
backend/tests/utilities/: anointed.txt  anointedv8.txt  anointedv9.txt  clone_ilab.py  clone_opensearch.yml  diagnose.py  fix_snapshot.py
deploy/: Chart.yaml  README.md  values.yaml
deploy/templates/: deployment.yaml  route.yaml  secret.yaml  service.yaml
frontend/: .env.development  .eslintrc.cjs  .gitignore  .prettierrc.json  README.md  cypress.config.js  deploy.containerfile  e2e_frontend.containerfile  entrypoint.sh  frontend-dev.containerfile  frontend.containerfile  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  to_run  vite.config.js
frontend/cypress/component/: table_cell.cy.jsx
frontend/cypress/e2e/: api_spec.cy.js  home.cy.js  ocp.cy.js
frontend/cypress/support/: commands.js  component.js  e2e.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx  ChristmasCracker.css  ChristmasCracker.js  OcpPerformanceTable.css  etl.js  index.css  index.js  main.jsx  mocks.js  setupProxy.js
frontend/src/actions/: commonActions.js  filterActions.js  headerActions.js  homeActions.js  ilabActions.js  kpiActions.js  ocpActions.js  olsActions.js  openstackActions.js  paginationActions.js  quayActions.js  sideMenuActions.js  sortingActions.js  summaryActions.js  telcoActions.js  toastActions.js  types.js
frontend/src/commons/: DisplayGrafana.js
frontend/src/components/: HomeView.js  OcpPerformanceHeader.js  OcpPerformanceTable.css  OcpPerformanceTable.js  PerformanceEntry.js  PerformanceResults.js  PerformanceTabs.js  PlatformTabs.js  VersionDf.js  VersionLinks.js  VersionList.js  VersionTabs.js  WithLabels.js
frontend/src/helpers/: Formatters.js  TelcoGraphReducer.js  Utils.js
frontend/src/hooks/: useCardData.js  useESPerfData.js  usePerfData.js  useProwPerfData.js
frontend/src/reducers/: headerReducer.js  index.js  (+12 more)
frontend/tests/: e2e-2.sh  e2e-in-network.sh  e2e.sh
src/: App.js  index.js  mocks.js
src/Components/: BasicTable.js
src/components/: OcpPerformanceApp.js  VersionDf.js  VersionList.js  WithLabels.js
testing/: compose.yaml  db_seed.py  funcconfig.toml  functional.containerfile  ocpperf_test.toml  opensearch.sh  opensearch.yml  pod_setup.sh
(+169 files in other folders)
