[project]
name = "openshift_perfscale_api"
requires-python = "^3.9"
dynamic = ["dependencies"]
version = "0.1.1"
description = "Python transformer of OpenShift performance and scale test results"
authors = [{name = "mleader", email = "mleader@redhat.com"}]

[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
aiohttp = "^3.7.4"
atlassian-python-api = "^3.41.9"
cryptography = "^3.4.8"
elasticsearch = "7.13.4"
fastapi = "^0.104.1"
httptools = "^0.2.0"
httpx = "^0.18.1"
numpy = "1.26.4"
orjson = "^3.5.3"
pandas = "1.2.4"
pydantic = "2.3.0"
python = "^3.9"
python-keycloak = "^3.12.0"
semver = "2.13.0"
splunk-sdk = "2.0.1"
trio = "^0.18.0"
uvicorn = "^0.14.0"
uvloop = "^0.15.2"
vyper-config = "1.0.0"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
watchgod = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
